<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".fragment.ProfileFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivManoj"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/manoj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manoj_thakur"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/ivManoj"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thakurmnaoj2000_gmail_com"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0123456789"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:textColor="@color/black"
        android:layout_below="@id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vill_nari_chata_mathura"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_below="@id/txtMobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>
</FrameLayout>