<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DescriptionActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        />

    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp">

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:id="@+id/llContent"
    android:weightSum="6"
    android:orientation="horizontal"
    >
        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            android:padding="5dp"
            android:layout_weight="1.5"
            />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3"
                    android:layout_marginLeft="15dp">
                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/book_name"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:textColor="#000000"
                        />
                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_below="@+id/txtBookName"
                        android:text="@string/author_name"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/rs_299"
                        android:layout_below="@id/txtBookAuthor"
                        android:padding="5dp"
                        />


                </RelativeLayout>
        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:drawableLeft="@drawable/star"
            android:layout_weight="1.2"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            />


</LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/llContent">
    <TextView
        android:id="@+id/txtAboutBookStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_book"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/txtBookDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAboutBookStatic"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/paragraphs"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold" />

        </RelativeLayout>
      </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
 <ProgressBar
     android:id="@+id/progressBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true"
     />

    </RelativeLayout>

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        android:textSize="19sp"
        android:backgroundTint="@color/teal_700"
        android:layout_alignParentBottom="true"
        android:padding="5dp"/>

</RelativeLayout>