<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:background="#ffffff"
    android:weightSum="6"
    android:id="@+id/llContent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/rlBookInfo">

    <ImageView
        android:id="@+id/ivBookLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_book_logo"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/txtBookName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/wings_of_love"
        android:layout_toRightOf="@id/ivBookLogo"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/txtBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/name_of_the_author"
        android:layout_toRightOf="@id/ivBookLogo"
        android:layout_below="@id/txtBookName"
        android:padding="5dp"
         />
        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toEndOf="@id/ivBookLogo"
            android:layout_below="@id/txtBookAuthor"
            android:padding="5dp"
            />

        <TextView
            android:id="@+id/txtBookRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            app:drawableLeftCompat="@drawable/star" />

    </RelativeLayout>


</LinearLayout>
</androidx.cardview.widget.CardView>