<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wingOfLove">

        <ImageView
            android:id="@+id/ivBookLogoLove"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtWingLove"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/wings_of_love"
            android:layout_toRightOf="@id/ivBookLogoLove"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRatingLove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtWingLove"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorLove"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoLove"
            android:layout_below="@id/txtWingLove"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtPriceLove"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoLove"
            android:layout_below="@id/txtAuthorLove"
            android:padding="5dp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/WingOfFire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wingOfLove">
        <ImageView
            android:id="@+id/ivBookLogoFire"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtWingFire"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/wing_of_fire"
            android:layout_toRightOf="@id/ivBookLogoFire"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRatingFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtWingFire"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorFire"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoFire"
            android:layout_below="@id/txtWingFire"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtPriceFire"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoFire"
            android:layout_below="@id/txtAuthorFire"
            android:padding="5dp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/richDad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WingOfFire">
        <ImageView
            android:id="@+id/ivBookLogoRich"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtRichDad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rich_dad_poor_dad"
            android:layout_toRightOf="@id/ivBookLogoRich"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRatingRich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtRichDad"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorNameRich"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoRich"
            android:layout_below="@id/txtRichDad"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtPriceRich"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoRich"
            android:layout_below="@id/txtAuthorNameRich"
            android:padding="5dp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/halfGirlfriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/richDad">
        <ImageView
            android:id="@+id/ivBookLogoGirlfriend"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtHalfGirlfriend"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/half_girlfriend"
            android:layout_toRightOf="@id/ivBookLogoGirlfriend"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRatingGirlfriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtHalfGirlfriend"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorNameHalfGf"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoGirlfriend"
            android:layout_below="@id/txtHalfGirlfriend"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtPriceHalfGf"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoGirlfriend"
            android:layout_below="@id/txtAuthorNameHalfGf"
            android:padding="5dp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/idiot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/halfGirlfriend">
        <ImageView
            android:id="@+id/ivBookLogoIdiot"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtIdiot"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/_3_idiot"
            android:layout_toRightOf="@id/ivBookLogoIdiot"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtIdiot"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoIdiot"
            android:layout_below="@id/txtIdiot"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoIdiot"
            android:layout_below="@id/txtAuthorName"
            android:padding="5dp"

            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/states"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idiot">
        <ImageView
            android:id="@+id/ivBookLogoStates"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_book_logo"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/txtStates"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/_2_states"
            android:layout_toRightOf="@id/ivBookLogoStates"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/txtRatingStates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_5"
            android:textColor="#EDC754"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawableLeft="@drawable/star"
            android:layout_toRightOf="@id/txtStates"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/txtAuthorNameStates"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/name_of_the_author"
            android:layout_toRightOf="@id/ivBookLogoStates"
            android:layout_below="@id/txtStates"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/txtPriceStates"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/rs_299"
            android:layout_toRightOf="@id/ivBookLogoStates"
            android:layout_below="@id/txtAuthorNameStates"
            android:padding="5dp"

            />
    </RelativeLayout>
</RelativeLayout>